<resources>
    <string name="app_name">Smart Access</string>
    <string name="Title_Text">Smart Access</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="input_email">Enter Email</string>
    <string name="input_password">Enter password</string>
    <string name="link_forgotpw">Forgot Password?</string>
    <string name="input_confirmpw">Confirm Password</string>
    <string name="input_fname">Enter First Name</string>
    <string name="input_lname">Enter Last Name</string>
    <string name="personal_text">Personal Information</string>
    <string name="password_text">Create Password</string>
    <string name="title_activity_consumer_mode">ConsumerModeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Greeting">Hello,</string>
    <string name="Name">Name</string>
    <string name="Total_Points">4,201,337</string>
    <string name="Points_Text">Loyalty Points</string>
    <string name="Booking_Nav">Book</string>
    <string name="Reservations_Nav">Reservation</string>
    <string name="Rooms_Nav">Enter Room</string>
    <string name="Account_Nav">Account</string>
    <string name="Kiosk_Welcome">Welcome</string>
    <string name="Room1">Room 322</string>
    <string name="Room2">Room 455</string>
    <string name="Lock_Message">Hold Phone Near Door Lock to Unlock it</string>
    <string name="Submit_Button">Submit</string>
    <string name="Verification_Text">Verification</string>
    <string name="Verification_Hint">Enter code sent to email</string>
    <string name="Kiosk_Success">Successfully Checked-In, Hold Phone Near Screen to Receive Virtual Room Key</string>
    <string name="EventID">EventID</string>
    <string name="TimeStamp">Timestamp</string>
    <string name="Action">Action</string>
    <string name="Result">Result</string>
    <string name="Asset">Asset</string>
    <string name="Guest">Guest</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_mode">AdminModeActivity</string>
    <string name="CheckIn_Options">Choose Room Access Method</string>
    <string name="CardAccess">Access Room Using Card</string>
    <string name="PhoneAccess">Access Room Using Phone</string>
    <string name="CardScan">Hover Card Over Screen to Receive Virtual Room Key</string>
    <string name="CheckInButton">Check-In</string>
    <string name="CheckOutButton">Check-Out</string>
    <string name="ReservationText">Enter Reservaton Number</string>
    <string name="RoomCheckOut">Enter Room Number</string>
    <string name="NameCheckOut">Enter Last Name</string>
    <string name="SuccessfulCheckOut">Successfully Checked-Out</string>
    <string name="ReservationSuccess">Reservation Number Received</string>
    <string name="ScanMessage">Scan your NFC Device</string>
    <string name="NFCWarning">*Make sure your device\'s NFC is enabled</string>
    <string name="CheckInSuccessText">Successfully Checked-In</string>
    <string name="ReturnButton">Finish</string>
    <string name="ReservationNumberLabel">Reservation Number:</string>
    <string name="ReservationNumber">12345</string>
    <string name="LastNameLabel">Last Name:</string>
    <string name="LastName">Smith</string>
    <string name="RoomNumberLabel">Room Number:</string>
    <string name="RoomNumber">455</string>
    <string name="EnterRoomMessage">Please hold your NFC device up to the door sensor</string>
    <string name="FirstName">John</string>
    <string name="SignOutButton">Sign Out</string>
    <string name="TestUserEmail">john123@email.com</string>
    <string name="AdminHeader">Blockchain Network</string>
    <string name="AdminSignOut">Admin</string>
    <string name="ReservationError">Invalid Reservation Number</string>
    <string name="CheckOutError">Invalid Last Name and/or Room Number</string>
    <string name="FirstNameLabel">First Name:</string>
    <string name="EmailLabel">Email:</string>
    <string name="ReservationButton">Reservation Information</string>
    <string name="RoomButton">Enter Room</string>
    <string name="AccountButton">Account Details</string>
    <string name="RequestKeyButton">Request Key</string>
    <string name="RequestKeyMessage">*Tap \"Request Key\" on your device to receive the virtual key</string>
</resources>
