<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".KioskCheckoutActivity">

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="300dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/RoomCheckOut"
        android:inputType="number"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="300dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/NameCheckOut"
        android:inputType="textPersonName"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="350dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="350dp"
        android:background="@color/colorPrimary"
        android:text="@string/Submit_Button"
        android:onClick="checkOutSuccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10" />
</android.support.constraint.ConstraintLayout>